<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="QSu-P5-HgM">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Tab Bar Controller-->
        <scene sceneID="rJH-GY-TIx">
            <objects>
                <tabBarController id="QSu-P5-HgM" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" id="bDq-ky-lKq">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                    </tabBar>
                    <connections>
                        <segue destination="VWD-6U-kvx" kind="relationship" relationship="viewControllers" id="Jl7-I9-u5u"/>
                        <segue destination="gmt-c3-8Fc" kind="relationship" relationship="viewControllers" id="UZk-EC-pFB"/>
                        <segue destination="vQa-ua-MWh" kind="relationship" relationship="viewControllers" id="zxu-wH-IeD"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1as-HL-PuZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-866" y="-333"/>
        </scene>
        <!--Trending-->
        <scene sceneID="gwR-gs-EWg">
            <objects>
                <viewControllerPlaceholder storyboardName="Trending" id="VWD-6U-kvx" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Trending" image="discover_icon" id="v8Q-bB-RUb"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="d1h-08-8z5" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-306" y="-395"/>
        </scene>
        <!--Watching-->
        <scene sceneID="0xh-ZA-ZxV">
            <objects>
                <viewControllerPlaceholder storyboardName="Watching" id="gmt-c3-8Fc" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Watching" image="watching_icon" id="Rrk-s6-KcU"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zd7-2p-kjX" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-303" y="-334"/>
        </scene>
        <!--Profile-->
        <scene sceneID="SsY-5a-nDh">
            <objects>
                <viewControllerPlaceholder storyboardName="Profile" id="vQa-ua-MWh" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="profile_icon" id="2H3-iA-PxW"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="TKa-IK-ioF" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-317" y="-282"/>
        </scene>
    </scenes>
    <resources>
        <image name="discover_icon" width="25" height="25"/>
        <image name="profile_icon" width="30" height="30"/>
        <image name="watching_icon" width="42" height="25"/>
    </resources>
</document>
