...
    var dataSource : [SerieModel] = []
    var textSearch : String!
    
    override func viewDidLoad() {
        super.viewDidLoad()

        title = "Search Series"
        searchBar.text = textSearch

        configureDataSource(query: searchBar.text ?? "")
        configureCollectionView()
    }
    
...
