...
                    <navigationItem key="navigationItem" prompt="Profile" id="nS5-6z-thv">
                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="cQL-Da-gm6">
                            <rect key="frame" x="60" y="37" width="255" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Watched Episodes"/>
                                <segment title="NextUp Episodes"/>
                            </segments>
                            <connections>
                                <action selector="changeSegmentControl:" destination="aZr-iv-6yk" eventType="valueChanged" id="Rtl-cz-IBC"/>
                            </connections>
                        </segmentedControl>
                    </navigationItem>
...
